[package]
name = "status-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
elytra-ping = "5.1.0"
reqwest = { version = "0.12.5", features = ["rustls-tls", "charset", "http2"], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
